user login experience refinements

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,8 +1,15 @@
+<style>
+  p.error-message {
+    text-align: center;
+    color: red;
+  }
+</style>
 <ion-content>
   <div text-center class="logo">
     <img src="assets/agility360-logo-transparent-512x512.png" />
   </div>
   <form (submit)="login()">
+    <strong><p class="error-message" *ngIf="errMsg" >{{errMsg}}</p></strong>
     <ion-list>
 
       <ion-item>
@@ -23,6 +30,9 @@
         <p>Don't have an account yet? <a (click)="signup()">Create one.</a></p>
       </div>
 
+      <div padding text-center>
+        <p *ngIf="errMsg" >Problems logging in? Contact us at mobile@agility360app.net or call us at (469) 208-6300.</p>
+      </div>
     </ion-list>
   </form>
 </ion-content>
