--- a/src/pages/jobhistory/jobhistory.html
+++ b/src/pages/jobhistory/jobhistory.html
@@ -6,6 +6,23 @@
               Job History, Education, and Certifications
 -->
 <style>
+.card-title-block {
+  margin-left: 2px;
+  margin-right: 2px;
+  border-bottom: 1px solid #ddd;
+  font-size: 20px;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.title {
+  text-align: center;
+}
+
+.department {
+  text-align: center;
+}
+
 .salary {
   padding: 5px;
   border-top: 1px solid #999;
@@ -55,16 +72,20 @@
   <div *ngIf="cards">
     <ion-list *ngFor="let card of cards">
       <ion-card>
-        <ion-item>
-          <ion-avatar item-start>
-            <img src="http://cdn.agility360app.net/">
-          </ion-avatar>
-          <h2>{{ card.company_name || uppercase }}</h2>
-          <p>{{ card.job_title}}</p>
-          <p>{{ card.department.toString().replace("None", "") }}</p>
-        </ion-item>
-
         <ion-card-content>
+          <ion-card-title class="card-title-block">
+            {{ card.company_name || uppercase }}
+          </ion-card-title>
+
+          <ion-item class="job-dates">
+            <ion-row>
+              <ion-col>
+                <p class="title">{{ card.job_title}}</p>
+                <p class="department">{{ card.department.toString().replace("None", "") }}</p>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+
           <ion-item class="job-dates">
             <ion-row>
               <ion-col text-left>
