--- a/src/pages/education/education.html
+++ b/src/pages/education/education.html
@@ -47,7 +47,7 @@
       <ion-card>
         <ion-item>
           <ion-avatar item-start>
-            <img src="http://cdn.agility360app.net/">
+            <ion-icon name="school" item-start></ion-icon>
           </ion-avatar>
           <h2>{{ card.institution_name || uppercase }}</h2>
           <p>{{ card.degree}}</p>
