--- a/src/pages/jobhistory/jobhistory.html
+++ b/src/pages/jobhistory/jobhistory.html
@@ -40,6 +40,19 @@
 .job-dates p {
 }
 
+.app-background {
+  background: #f1f1f1; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15) , rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, rgba(0, 127, 166, .05), rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .5), rgba(0, 127, 166, .75) 100%), url("assets/background-image.jpg") center repeat; /* Standard syntax */
+  opacity: 1;
+}
+.leader {
+  background-color: rgba(255, 255, 255, 1);
+  padding: 25px;
+  margin-bottom: 25px;
+}
 </style>
 <ion-header>
 
@@ -53,7 +66,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="app-background">
   <ion-refresher (ionRefresh)="refresh($event)">
     <ion-refresher-content
                   pullingIcon="arrow-dropdown"
@@ -63,11 +76,11 @@
     </ion-refresher-content>
   </ion-refresher>
 
-
-  <h3 style="color: #2897C2;">Why Provide Your Job History?</h3>
-  <p>By providing Agility 360 with accurate details of your job history we are able to blah blah blah.</p>
-  <p>Research shows that blah blah blah.</p>
-
+  <div class="leader">
+    <h3 style="color: #2897C2;">Why Provide Your Job History?</h3>
+    <p>By providing Agility 360 with accurate details of your job history we are able to blah blah blah.</p>
+    <p>Research shows that blah blah blah.</p>
+  </div>
 
   <div *ngIf="cards">
     <ion-list *ngFor="let card of cards">
