--- a/src/pages/resume/resume.html
+++ b/src/pages/resume/resume.html
@@ -25,6 +25,15 @@
     font-weight: bolder;
     text-align: center;
   }
+  .app-background {
+    background: #f1f1f1; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left top, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15) , rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, rgba(0, 127, 166, .05), rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .5), rgba(0, 127, 166, .75) 100%), url("assets/background-image.jpg") center repeat; /* Standard syntax */
+    opacity: 1;
+  }
+
 </style>
 <ion-header>
 
@@ -33,7 +42,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="app-background">
   <ion-refresher (ionRefresh)="refreshData($event)">
     <ion-refresher-content
                   pullingIcon="arrow-dropdown"
