--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,3 +1,19 @@
+<style>
+  .app-background {
+    background: #f1f1f1; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left top, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15) , rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, rgba(0, 127, 166, .05), rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .5), rgba(0, 127, 166, .75) 100%), url("assets/background-image.jpg") center repeat; /* Standard syntax */
+    opacity: 1;
+  }
+  .leader {
+    background-color: rgba(255, 255, 255, 1);
+    padding: 25px;
+    margin-bottom: 25px;
+  }
+
+</style>
 <ion-header>
   <ion-navbar>
     <ion-title>
@@ -6,7 +22,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="app-background">
   <ion-list>
     <button ion-item [navPush]="jobhistoryPage">
     <ion-icon name="briefcase" item-start></ion-icon>
