--- a/src/pages/jobhistory-detail/jobhistory-detail.html
+++ b/src/pages/jobhistory-detail/jobhistory-detail.html
@@ -1,17 +1,3 @@
-<style>
-.form-label {
-  margin-top: 10px;
-}
-.editable-field {
-  color: green;
-  font-weight: bolder;
-  margin-bottom: 5px;
-}
-
-.description {
-  min-height: 100px;
-}
-</style>
 <ion-header>
 
   <ion-navbar>
@@ -21,7 +7,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="app-background">
 
   <form (ngSubmit)="processForm()">
     <ion-item>
