--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -7,17 +7,12 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Notifications 
+      Notifications
     </ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="addTask()">
-        <ion-icon name="add"></ion-icon>
-      </button>
-    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding class="app-background">
   <ion-refresher (ionRefresh)="refreshData($event)">
     <ion-refresher-content
                   pullingIcon="arrow-dropdown"
