--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,19 +1,3 @@
-<style>
-  .app-background {
-    background: #f1f1f1; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(left top, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(bottom right, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(bottom right, #f1f1f1, #f1f1f1, rgba(0, 127, 166, .15) , rgba(0, 127, 166, .30), rgba(0, 127, 166, .35), rgba(0, 127, 166, .5) 100%), url("assets/background-image.jpg") center repeat; /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to bottom right, rgba(0, 127, 166, .05), rgba(0, 127, 166, .15), rgba(0, 127, 166, .30), rgba(0, 127, 166, .5), rgba(0, 127, 166, .75) 100%), url("assets/background-image.jpg") center repeat; /* Standard syntax */
-    opacity: 1;
-  }
-  .leader {
-    background-color: rgba(255, 255, 255, 1);
-    padding: 25px;
-    margin-bottom: 25px;
-  }
-
-</style>
 <ion-header>
   <ion-navbar>
     <ion-title>
@@ -23,7 +7,29 @@
 </ion-header>
 
 <ion-content class="app-background">
-  <ion-list>
+  <div class="heading">
+    <ion-row>
+      <ion-col col-3 style="text-align: right;">
+        <h4 style="color: gray;"><span style="color: #2897C2;">User</span></h4>
+        <h4 style="color: gray;"><span style="color: #2897C2;">Email</span></h4>
+      </ion-col>
+      <ion-col >
+        <h3 style="color: gray;">{{ this.username }}</h3>
+        <h4 style="color: gray;">{{ this.email }} <span *ngIf="this.email_verified">(<span style="color: green;">verified</span>)</span></h4>
+      </ion-col>
+    </ion-row>
+
+  </div>
+  <div padding text-center>
+    <div *ngIf="avatarPhoto" class="avatar" [style.background-image]="'url('+ avatarPhoto +')'">
+    </div>
+
+    <button ion-button clear (click)="selectAvatar()">Change photo</button>
+
+    <input #avatar class="avatar-input" type="file" (change)="uploadFromFile($event)" />
+  </div>
+
+  <ion-list padding>
     <button ion-item [navPush]="jobhistoryPage">
     <ion-icon name="briefcase" item-start></ion-icon>
       Job History
@@ -42,7 +48,7 @@
       Account
     </button>
     <button ion-item (click)="logout()">
-      <ion-icon name="" item-start></ion-icon>
+      <ion-icon name="log-out" item-start></ion-icon>
       <ion-label color="danger">Logout</ion-label>
     </button>
   </ion-list>
