--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -45,7 +45,7 @@
 
     <button ion-item [navPush]="profilePage">
     <ion-icon name="contact" item-start></ion-icon>
-      Profile
+      Candidate Profile
     </button>
     <button ion-item (click)="logout()">
       <ion-icon name="log-out" item-start></ion-icon>
