changed constant URL to https

--- a/src/pages/jobs/jobs.html
+++ b/src/pages/jobs/jobs.html
@@ -28,7 +28,7 @@
         <div class="card-title-block">
           <ion-item>
             <ion-avatar item-start>
-              <img src="http://cdn.agility360app.net/">
+              <img src="https://cdn.agility360app.net/">
             </ion-avatar>
             <h2 text-wrap>{{ post.title.rendered }}</h2>
             <p style="margin-top: 10px;">Posted: {{ post.date.toString().replace("None", "") | date:"MMM dd, yyyy" }}</p>
