--- a/src/pages/resume/resume.html
+++ b/src/pages/resume/resume.html
@@ -27,7 +27,7 @@
         <div class="card-title-block">
           <ion-item>
             <ion-avatar item-start>
-              <img src="http://cdn.agility360app.net/">
+              <img src="https://cdn.agility360app.net/">
             </ion-avatar>
             <h2>{{ post.title.rendered }}</h2>
           </ion-item>
