--- a/src/pages/certification-detail/certification-detail.html
+++ b/src/pages/certification-detail/certification-detail.html
@@ -21,11 +21,11 @@
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Date Received</ion-label>
-      <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="obj.date_received" name="date_received"></ion-datetime>
+      <ion-datetime class="editable-field" displayFormat="MM/DD/YYYY" [(ngModel)]="obj.date_received" name="date_received"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Expire Date</ion-label>
-      <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="obj.expire_date" name="expire_date"></ion-datetime>
+      <ion-datetime class="editable-field" displayFormat="MM/DD/YYYY" [(ngModel)]="obj.expire_date" name="expire_date"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Description</ion-label>
