--- a/src/pages/jobhistory-detail/jobhistory-detail.html
+++ b/src/pages/jobhistory-detail/jobhistory-detail.html
@@ -24,11 +24,11 @@
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Start Date</ion-label>
-      <ion-datetime class="editable-field" displayFormat="MM/DD/YYYY" [(ngModel)]="obj.start_date" name="start_date"></ion-datetime>
+      <ion-datetime class="editable-field" displayFormat="MMMM D, YYYY" [(ngModel)]="obj.start_date" name="start_date"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">End Date</ion-label>
-      <ion-datetime class="editable-field" displayFormat="MM/DD/YYYY" [(ngModel)]="obj.end_date" name="end_date"></ion-datetime>
+      <ion-datetime class="editable-field" displayFormat="MMMM D, YYYY" [(ngModel)]="obj.end_date" name="end_date"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Final Salary</ion-label>
