added description to Certifications and Education

--- a/src/pages/certifications/certifications.html
+++ b/src/pages/certifications/certifications.html
@@ -72,7 +72,7 @@
           <ion-item>
             <ion-row>
               <ion-col>
-                <p class="description" text-wrap>Text description should go here?</p>
+                <p class="description" text-wrap>{{ card.description }}</p>
               </ion-col>
             </ion-row>
           </ion-item>
