--- a/src/pages/certification-detail/certification-detail.html
+++ b/src/pages/certification-detail/certification-detail.html
@@ -29,7 +29,7 @@
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Description</ion-label>
-<!--      <ion-textarea class="editable-field" class="description" [(ngModel)]="obj.description" name="description" placeholder="Optional: provide us with a few sentences about your role and responsibilities for this position."></ion-textarea>  -->
+      <ion-textarea class="editable-field" class="description" [(ngModel)]="obj.description" name="description" placeholder="Optional: provide us with a few sentences about this certification."></ion-textarea>
     </ion-item>
     <button ion-button type="submit" block>Save</button>
   </form>
