--- a/src/pages/education/education.html
+++ b/src/pages/education/education.html
@@ -71,7 +71,7 @@
           <ion-item>
             <ion-row>
               <ion-col>
-                <p class="description" text-wrap>Text description should go here?</p>
+                <p class="description" text-wrap> {{ card.description }}</p>
               </ion-col>
             </ion-row>
           </ion-item>
