edit functionality / form processing

--- a/src/pages/profile-edit/profile-edit.html
+++ b/src/pages/profile-edit/profile-edit.html
@@ -19,52 +19,53 @@
 <ion-content padding class="app-background">
   <form (submit)="save()" padding>
     <strong><p class="error-message" *ngIf="error">{{error.message}}</p></strong>
+
     <ion-list>
       <ion-item>
         <ion-label floating>First Name</ion-label>
-        <ion-input class="editable-field" type="text" [(ngModel)]="candidate.first_name" autocorrect="off" autocapitalize="none" name="first_name"></ion-input>
+        <ion-input class="editable-field" type="text" [(ngModel)]="obj.first_name" autocorrect="off" autocapitalize="none" name="first_name"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label floating>Middle Name</ion-label>
-        <ion-input class="editable-field" type="text" [(ngModel)]="candidate.middle_name" autocorrect="off" autocapitalize="none" name="middle_name"></ion-input>
+        <ion-input class="editable-field" type="text" [(ngModel)]="obj.middle_name" autocorrect="off" autocapitalize="none" name="middle_name"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label floating>Last Name</ion-label>
-        <ion-input class="editable-field" type="text" [(ngModel)]="candidate.last_name" autocorrect="off" autocapitalize="none" name="last_name"></ion-input>
+        <ion-input class="editable-field" type="text" [(ngModel)]="obj.last_name" autocorrect="off" autocapitalize="none" name="last_name"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label floating>Your Current City of Residence</ion-label>
-        <ion-input class="editable-field" type="text" [(ngModel)]="candidate.city" autocorrect="off" autocapitalize="none" name="city"></ion-input>
+        <ion-input class="editable-field" type="text" [(ngModel)]="obj.city" autocorrect="off" autocapitalize="none" name="city"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label floating>Your Current State of Residence</ion-label>
-        <ion-input class="editable-field" type="text" [(ngModel)]="candidate.state" autocorrect="off" autocapitalize="none" name="state"></ion-input>
+        <ion-input class="editable-field" type="text" [(ngModel)]="obj.state" autocorrect="off" autocapitalize="none" name="state"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label floating>Your Daytime Phone Number</ion-label>
-        <ion-input class="editable-field" type="tel" [(ngModel)]="candidate.phone_number" autocorrect="off" autocapitalize="none" name="phone_number"></ion-input>
+        <ion-input class="editable-field" type="tel" [(ngModel)]="obj.phone_number" autocorrect="off" autocapitalize="none" name="phone_number"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label>Are You Currently Job Hunting?</ion-label>
-        <ion-checkbox class="editable-field" [(ngModel)]="candidate.job_hunting" name="job_hunting"></ion-checkbox>
+        <ion-checkbox class="editable-field" [(ngModel)]="obj.job_hunting" name="job_hunting"></ion-checkbox>
       </ion-item>
 
       <ion-item>
         <ion-label floating>Your Industry</ion-label>
-        <ion-input class="editable-field" type="text" [(ngModel)]="candidate.industry_id" name="industry_id"></ion-input>
-        <ion-input class="editable-field" type="text" [(ngModel)]="candidate.subindustry_id" name="subindustry_id"></ion-input>
+        <ion-input class="editable-field" type="text" [(ngModel)]="obj.industry_id" name="industry_id"></ion-input>
+        <ion-input class="editable-field" type="text" [(ngModel)]="obj.subindustry_id" name="subindustry_id"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label floating>Your Profession</ion-label>
-        <ion-input class="editable-field" type="text" [(ngModel)]="candidate.profession_id" name="profession_id"></ion-input>
-        <ion-input class="editable-field" type="text" [(ngModel)]="candidate.subprofession_id" name="subprofession_id"></ion-input>
+        <ion-input class="editable-field" type="text" [(ngModel)]="obj.profession_id" name="profession_id"></ion-input>
+        <ion-input class="editable-field" type="text" [(ngModel)]="obj.subprofession_id" name="subprofession_id"></ion-input>
       </ion-item>
 
     </ion-list>
