--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -52,7 +52,7 @@
     <ion-item no-lines>
       <ion-label class="agility-label">State: </ion-label>
       <div item-content>
-        {{ this.card.phone }}
+        {{ this.card.state }}
       </div>
     </ion-item>
 
